验证并发问题