@@ -1,1 +1,16 @@
 # platform
+
+## 采用的技术栈
+
+- SpringBoot：2.5.3
+- SpringCloud：2020.0.3
+- SpringCloudAlibaba：2021.1
+- mysql-connector-java：8.0.26
+- mybatis-plus：3.4.3.1
+- Resilience4j：1.7.0
+
+## 指定JVM
+
+```shell
+-Xms2048M -Xmx2048M -Xss256k -XX:MetaspaceSize=256M -XX:MaxMetaspaceSize=256M -XX:+PrintGCDetails -XX:+PrintGCDateStamps
+```
